<resources>
    <string name="app_name">etBadel</string>
    <string name="title_chat">Chat</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_decription">This is a Item description \n This is Item description</string>

    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login Page</string>
    <string name="login_button">Login</string>
    <string name="login_using_fb">Login through facebook</string>
    <string name="login_using_google">Login through google</string>
    <string name="string_or">OR</string>
    <string name="create_new_user_button">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_register">RegisterActivity</string>

    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registration_title">Registration</string>

    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register_button">Register</string>
    <string name="acceptance">"By submitting the information you are "</string>
    <string name="acceptance2">accepting</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="my_profile_title">My Profile</string>
    <string name="edit_email">Email</string>
    <string name="submit_txt">Submit</string>
    <string name="profile_image">Profile Image</string>
    <string name="string_search">Search</string>
    <string name="string_neighbor">Neighbor</string>
    <string name="string_city">City</string>
    <string name="string_category">Category</string>
    <string name="string_item_name">What Are You Trading?</string>
    <string name="string_item_name_hint">Example: Casio Men Hand Watch</string>
    <string name="string_condition">Condition</string>
    <string name="string_condition1">New</string>
    <string name="string_condition2">Barely Used</string>
    <string name="string_condition3">Used</string>
    <string name="string_desctription">Describe the item</string>
    <string name="string_free">Give it for free</string>
    <string name="string_done">Post</string>
    <string name="string_name">"Name: "</string>
    <string name="string_location">"Location: "</string>
    <string name="string_area">"Area: "</string>
    <string name="string_condition_dashboard">"Condition: "</string>
    <string name="string_send">Trade</string>
    <string name="string_desctription_hint">Example: Used for 2 months, with no scratches</string>
    <string name="facebook_app_id">769384030578964</string>
    <string name="fb_login_protocol_scheme">fb769384030578964</string>
    <string name="username_error_string">"Please enter user name "</string>

    <string name="password_error_string">Please enter password</string>
    <string name="check_internet_error">Please check internet connection</string>
    <string name="server_unreachable_error">Server not reachable</string>
    <string name="first_name_string_error">Please enter first name</string>
    <string name="last_name_string_error">Please enter last name</string>
    <string name="empty_emailid_error">Please enter email ID</string>
    <string name="valid_emailid_error">Please enter valid email ID</string>
    <string name="password_string_error">Please enter password</string>
    <string name="same_password_string_error">Please make sure your passwords match</string>
    <string name="notification_txt_string0">is interested in</string>
    <string name="notification_txt_string1">added new item</string>
    <string name="no_notifications">No notifications</string>
    <string name="no_post_yet">No Posts Yet</string>
    <string name="send_trade_offer">Send Trade Offer?</string>
    <string name="send_trade_offer_desc">The receiver of this offer will let you know which of your item(s) they are interested to trade you for</string>
    <string name="trade_success">Trade Offer Successfully Sent</string>
    <string name="no_internet">Please check internet connection</string>
    <string name="all_messages">All Messages</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="online_users_messages">Online Users</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="block_user">Block User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout_ques">Do you really want to Logout?</string>
    <string name="no_str">No</string>
    <string name="yes_str">Yes</string>
    <string name="no_chats">No Chats</string>
    <string name="blocked_user">"This user is blocked by you "</string>
    <string name="unblock">UNBLOCK</string>
    <string name="you_blocked_user">You can reply after picking an item to trade for from the Notifications button</string>
    <string name="second_message">I will trade it for</string>
    <string name="take_picture">Take Picture</string>
    <string name="ok_txt">OK</string>
    <string name="check_again_str">Check Again</string>
    <string name="type_msg_str">Type a message</string>
    <string-array name="menuList">
        <item>Home</item>
        <item>Mute Notification</item>
        <item>My Ads</item>
        <item>My Profile</item>
        <item>Service Agreement</item>
        <item>Privacy Agreement</item>
        <item>Logout</item>
        <item>تغيير إلى اللغة العربية</item>


    </string-array>
    <string-array name="categoryList">
        <item>Free Stuff</item>
        <item>Others</item>
        <item>Sports equipment</item>
        <item>Houseware</item>
        <item>Furniture</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Women fashion</item>
        <item>Mens fashion</item>
        <item>Music instruments</item>
        <item>Mobile and Tablet</item>
        <item>Mother and children stuff</item>
        <!--        <item>Games, Consoles, Accessories</item>-->
    </string-array>
    <string-array name="cityList">
        <item>Amman</item>
        <item>Irbid</item>
        <item>Zarqa</item>
        <item>Balqa</item>
        <item>Jerash</item>
        <item>Ajloun</item>
        <item>Tafilah</item>
        <item>Aqaba</item>
        <item>Karak</item>
        <item>Badaba</item>
        <!--        <item>ma'an</item>-->
        <item>marfaq</item>
        <item>ghoor</item>
        <item>dead sea</item>
        <item>ramtha</item>
    </string-array>

</resources>