<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/first_name"
            android:layout_marginTop="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:padding="5dp"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_person_outline_24px"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/last_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:padding="5dp"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_person_outline_24px"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/user_name"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:padding="5dp"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_email"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:inputType="textPassword"
            android:padding="5dp"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_lock_24px"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/confirm_password"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="end"
            android:padding="5dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/edittext_border"
            android:drawableEnd="@drawable/ic_lock_24px"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:layout_marginLeft="50dp">

            <TextView
                android:id="@+id/acceptance1"
                android:layout_width="wrap_content"
                android:text="@string/acceptance"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_below="@id/acceptance1"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/acceptance2"
                android:layout_width="wrap_content"
                android:text="@string/acceptance2"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tandc"
                android:layout_width="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_toRightOf="@id/acceptance2"
                android:text="@string/tandc"
                android:textColor="@color/primary"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        </RelativeLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_solid_primary_color_view_button"
            android:layout_marginBottom="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/register_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:orientation="horizontal"
            android:gravity="center">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#000"
                android:layout_height="1dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/string_or"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#000"
                android:layout_height="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:background="@drawable/rounded_solid_grey_view_button"
            android:layout_marginLeft="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_using_fb"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook_app_logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_solid_grey_view_button"
            android:layout_marginLeft="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_using_google"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_google"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
