<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_height="wrap_content"
    tools:context=".util.TradeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_icon13_warning"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/send_trade_offer"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:text="@string/send_trade_offer_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#5f5f5f"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff"
            android:text="@string/no_str"/>

        <Button
            android:id="@+id/yes_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:textColor="#ffffff"
            android:text="@string/yes_str"/>

    </LinearLayout>

</LinearLayout>

