<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_my_profile">

    <LinearLayout
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/circular_view_profile">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera_alt_24px"/>

    </LinearLayout>

<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/profile_image"-->
<!--        android:layout_width="96dp"-->
<!--        android:layout_height="96dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:background="#e2e2e2"-->
<!--        android:scaleType="center"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:src="@drawable/ic_camera_alt_24px"-->
<!--        app:civ_circle_background_color="#e2e2e2"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/profile_image"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/first_name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:padding="5dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_person_outline_24px"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/last_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:padding="5dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_person_outline_24px"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/edit_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:padding="5dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_email"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:inputType="textPassword"
        android:padding="5dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_lock_24px"
        android:layout_height="wrap_content"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_solid_primary_color_view_button"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/submit_txt"/>


</LinearLayout>
