<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_login">


    <EditText
        android:layout_width="match_parent"
        android:hint="user name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_email"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:hint="password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edittext_border"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_solid_primary_color_view_button"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/login_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:background="@drawable/rounded_solid_grey_view_button"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/login_using_fb"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook_app_logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:background="@drawable/rounded_solid_grey_view_button"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/login_using_google"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal"
        android:gravity="center">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000"
            android:layout_height="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/string_or"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#000"
            android:layout_height="1dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_solid_primary_color_view_button"
        android:layout_marginBottom="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/create_new_user_button"/>
</LinearLayout>
