<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chats.ChatFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/all_messages_layout"
        android:background="@drawable/rounded_view_primary_color"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:id="@+id/all_messages_txt"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/all_messages" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/all_messages_layout"
        android:id="@+id/unread_messages_layout"
        android:background="@drawable/rounded_view"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:id="@+id/unread_messages_txt"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/unread_messages" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/unread_messages_layout"
        android:id="@+id/online_users_layout"
        android:background="@drawable/rounded_view"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:id="@+id/online_users_txt"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/online_users_messages" />
    </LinearLayout>
    <View
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:layout_below="@id/all_messages_layout"
        android:layout_width="match_parent"
        android:background="@color/md_black_1000"
        android:layout_height="1dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/separator"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/no_chats_text"
        android:layout_below="@id/separator"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/no_chats"
        android:layout_height="wrap_content"/>
</RelativeLayout>