<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".ui.chats.MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:background="#ffffff"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/online_dot_img"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:visibility="gone"
                android:src="@drawable/dotted_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sample"
                android:id="@+id/profile_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="25dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:id="@+id/username"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_below="@id/bar_layout"
        android:layout_above="@id/bottom"/>
    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/text_send"
            android:layout_toStartOf="@id/btn_send"
            android:background="@android:color/transparent"
            android:hint="Type a message"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:layout_width="40dp"
            android:background="@drawable/ic_baseline_send_24"
            android:id="@+id/btn_send"
            android:layout_alignParentEnd="true"
            android:layout_height="40dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomUnblock"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/md_red_800"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/blocked"
            android:text="@string/blocked_user"
            android:visibility="visible"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/you_block"
            android:text="@string/you_blocked_user"
            android:textColor="#fff"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/unlock_txt"
            android:text="@string/unblock"
            android:layout_width="wrap_content"
            android:padding="3dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:visibility="visible"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/progress_layout"
        android:background="#000000"
        android:gravity="center"
        android:alpha="@dimen/alp_value"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>